@@ -1,5 +1,6 @@
 package kezukdev.akyto.handler.listener;
 
+import akyto.core.Core;
 import kezukdev.akyto.handler.manager.InventoryManager;
 import kezukdev.akyto.request.Request;
 import kezukdev.akyto.request.Request.RequestType;
@@ -57,10 +58,9 @@ public class InventoryListener implements Listener {
 			return;
 		}
 		final Inventory inventory = event.getClickedInventory();
-		final String inventoryName = inventory.getName();
 		final Material itemMaterial = event.getCurrentItem().getType();
 		final Profile profile = Utils.getProfiles(event.getWhoClicked().getUniqueId());
-		if (inventoryName.contains("Leaderboard:")) {
+		if (inventory.equals(inventoryManager.getLeaderboardInventory())) {
 			event.setResult(Result.DENY);
 			event.setCancelled(true);
 		}
@@ -75,26 +75,26 @@ public class InventoryListener implements Listener {
 				event.setResult(Result.DENY);
 				return;
 			}
-			if (inventoryName.equals(inventoryManager.getQueueInventory()[0].getName())) {
+			if (inventory.equals(inventoryManager.getQueueInventory()[0])) {
 				this.main.getManagerHandler().getQueueManager().addPlayerToQueue(event.getWhoClicked().getUniqueId(), Kit.getLadderByID(event.getSlot(), main), false);
 				event.getWhoClicked().closeInventory();
 			}
-			if (inventoryName.equals(inventoryManager.getQueueInventory()[1].getName())) {
+			if (inventory.equals(inventoryManager.getQueueInventory()[1])) {
 				this.main.getManagerHandler().getQueueManager().addPlayerToQueue(event.getWhoClicked().getUniqueId(), Kit.getLadderByID(event.getSlot(), main), true);
 				event.getWhoClicked().closeInventory();
 			}
-			if (inventoryName.equals(inventoryManager.getQueueInventory()[2].getName())) {
+			if (inventory.equals(inventoryManager.getQueueInventory()[2])) {
 				final Request request = Utils.getRequestByUUID(event.getWhoClicked().getUniqueId());
 				request.setKit(Kit.getLadderByID(event.getSlot(), main));
 				event.getWhoClicked().openInventory(Kit.getLadderByID(event.getSlot(), main).name().equalsIgnoreCase("sumo") ? this.main.getManagerHandler().getInventoryManager().getArenaInventory()[1] : this.main.getManagerHandler().getInventoryManager().getArenaInventory()[0]);
 			}
-			if (inventoryName.equals(inventoryManager.getArenaInventory()[0].getName()) || inventoryName.equals(inventoryManager.getArenaInventory()[1].getName())) {
+			if (inventory.equals(inventoryManager.getArenaInventory()[0]) || inventory.equals(inventoryManager.getArenaInventory()[1])) {
 				final Request request = Utils.getRequestByUUID(event.getWhoClicked().getUniqueId());
 				request.setArena(event.getCurrentItem().getType().equals(Material.TRAP_DOOR) ? this.main.getManagerHandler().getArenaManager().getRandomArena(request.getKit().arenaType()) : Utils.getArenaByIcon(event.getCurrentItem().getType(), request.getKit().arenaType()));
 				this.main.getManagerHandler().getRequestManager().sendNotification(event.getWhoClicked().getUniqueId(), RequestType.DUEL);
 				event.getWhoClicked().closeInventory();
 			}
-			if (inventoryName.equals(inventoryManager.getPartyEventInventory().getName())) {
+			if (inventory.equals(inventoryManager.getPartyEventInventory())) {
 				if (itemMaterial.equals(Material.IRON_AXE)) {
 					event.getWhoClicked().openInventory(inventoryManager.getQueueInventory()[3]);
 				}
@@ -102,7 +102,7 @@ public class InventoryListener implements Listener {
 					event.getWhoClicked().openInventory(inventoryManager.getQueueInventory()[4]);
 				}
 			}
-			if (inventoryName.equals(inventoryManager.getQueueInventory()[3].getName()) || inventoryName.equals(inventoryManager.getQueueInventory()[4].getName())) {
+			if (inventory.equals(inventoryManager.getQueueInventory()[3]) || inventory.equals(inventoryManager.getQueueInventory()[4])) {
 			    final List<UUID> shuffle = new ArrayList<>(Utils.getPartyByUUID(event.getWhoClicked().getUniqueId()).getMembers());
 			    Collections.shuffle(shuffle);
 			    int size = shuffle.size();
@@ -115,9 +115,9 @@ public class InventoryListener implements Listener {
 			        secondTeam.add(shuffle.get(i));
 			    }
 			    Kit kit = Kit.getLadderByID(event.getSlot(), main);
-			    new Duel(main, Sets.newHashSet(firstTeam), Sets.newHashSet(secondTeam),false,  kit, event.getClickedInventory().getName().equals(inventoryManager.getQueueInventory()[3].getName()) ? DuelType.FFA : DuelType.SPLIT, null);
+			    new Duel(main, Sets.newHashSet(firstTeam), Sets.newHashSet(secondTeam),false,  kit, inventory.equals(inventoryManager.getQueueInventory()[3]) ? DuelType.FFA : DuelType.SPLIT, null);
 			}
-			if (inventoryName.equals(inventoryManager.getEditorInventory()[0].getName())) {
+			if (inventory.equals(inventoryManager.getEditorInventory()[0])) {
 				Utils.sendToEditor(event.getWhoClicked().getUniqueId(), Kit.getLadderByDisplay(event.getCurrentItem().getItemMeta().getDisplayName(), this.main));
 				event.getWhoClicked().closeInventory();
 			}
@@ -129,7 +129,7 @@ public class InventoryListener implements Listener {
 				event.setCancelled(true);
 				return;
 			}
-			if (inventoryName.equals(inventoryManager.getSpectateInventory().get(event.getWhoClicked().getUniqueId()).getName())) {
+			if (inventory.equals(inventoryManager.getSpectateInventory().get(event.getWhoClicked().getUniqueId()))) {
 				final String nextName = event.getCurrentItem().getItemMeta().getDisplayName().replace(ChatColor.WHITE.toString(), "");
 				event.getWhoClicked().teleport(Bukkit.getPlayer(nextName).getLocation());
 				event.getWhoClicked().closeInventory();
@@ -139,7 +139,7 @@ public class InventoryListener implements Listener {
 		boolean is_glass = itemMaterial.equals(Material.STAINED_GLASS) || itemMaterial.equals(Material.STAINED_GLASS_PANE) || itemMaterial.equals(Material.GLASS) || itemMaterial.equals(Material.COMPASS) || itemMaterial.equals(Material.AIR);
 		if (profile.isInState(ProfileState.EDITOR)) {
 			if (is_glass) return;
-			if (inventoryName.equals(event.getWhoClicked().getInventory().getName())) {
+			if (inventory.equals(event.getWhoClicked().getInventory())) {
 				return;
 			}
 			if (event.getClick().equals(ClickType.NUMBER_KEY)) {
@@ -147,7 +147,7 @@ public class InventoryListener implements Listener {
 				event.setCancelled(true);
 				return;
 			}
-			if (inventoryName.equals(inventoryManager.getEditorInventory()[1].getName())) {
+			if (inventory.equals(inventoryManager.getEditorInventory()[1])) {
 				for (ItemStack items : event.getWhoClicked().getInventory().getContents()) {
 					if (items.getType().equals(Material.COOKED_BEEF) || items.getType().equals(Material.GRILLED_PORK) || items.getType().equals(Material.GOLDEN_CARROT)) {
 						if (event.getCurrentItem().getType().equals(Material.COOKED_BEEF)) items.setType(Material.COOKED_BEEF);
@@ -156,7 +156,7 @@ public class InventoryListener implements Listener {
 					}
 				}
 			}
-			if (inventoryName.equals(inventoryManager.getEditorInventory()[2].getName())) {
+			if (inventory.equals(inventoryManager.getEditorInventory()[2])) {
 				if (itemMaterial.equals(Material.BOOKSHELF)) {
 					final Map<String, Edited> map = new HashMap<>();
 					map.put(this.main.getManagerHandler().getProfileManager().getEditing().get(event.getWhoClicked().getUniqueId()), new Edited(this.main.getManagerHandler().getProfileManager().getEditing().get(event.getWhoClicked().getUniqueId()), event.getWhoClicked().getInventory().getContents(), event.getWhoClicked().getInventory().getArmorContents()));
@@ -175,15 +175,15 @@ public class InventoryListener implements Listener {
 			}
 			event.setCancelled(true);
 		}
-		if (inventoryName.contains("Settings") && !inventoryName.contains("Spectate")) {
+		if (inventory.equals(inventoryManager.getSettingsInventory().get(event.getWhoClicked().getUniqueId()))) {
 			if (is_glass) return;
 			event.setResult(Result.DENY);
 			event.setCancelled(true);
 			if (itemMaterial.equals(Material.PAINTING)) {
-				profile.getSettings().set(0, profile.getSettings().get(0) ? Boolean.FALSE : Boolean.TRUE);
+				profile.getSettings().set(0, profile.getSettings().getFirst() ? Boolean.FALSE : Boolean.TRUE);
 				event.getWhoClicked().closeInventory();
 				inventoryManager.refreshSettingsInventory(event.getWhoClicked().getUniqueId(), 0, false);
-				Bukkit.getPlayer(event.getWhoClicked().getUniqueId()).sendMessage(ChatColor.DARK_GRAY + "You've been " + (profile.getSettings().get(0) ? ChatColor.GREEN + "enabled" : ChatColor.RED + "disabled") + ChatColor.DARK_GRAY + " you'r scoreboard");
+				Bukkit.getPlayer(event.getWhoClicked().getUniqueId()).sendMessage(ChatColor.DARK_GRAY + "You've been " + (profile.getSettings().getFirst() ? ChatColor.GREEN + "enabled" : ChatColor.RED + "disabled") + ChatColor.DARK_GRAY + " you'r scoreboard");
 				return;
 			}
 			if (itemMaterial.equals(Material.BLAZE_POWDER)) {
@@ -202,16 +202,16 @@ public class InventoryListener implements Listener {
 				return;
 			}
 		}
-		if (inventoryName.contains("Settings") && inventoryName.contains("Spectate")) {
+		if (inventory.equals(inventoryManager.getSettingsSpectateInventory().get(event.getWhoClicked().getUniqueId()))) {
 			if (is_glass) return;
 			if (itemMaterial.equals(Material.DIAMOND)) {
-				profile.getSpectateSettings().set(0, profile.getSpectateSettings().get(0) ? Boolean.FALSE : Boolean.TRUE);
+				profile.getSpectateSettings().set(0, profile.getSpectateSettings().getFirst() ? Boolean.FALSE : Boolean.TRUE);
 				event.getWhoClicked().closeInventory();
 				final Duel duel = Utils.getDuelBySpectator(event.getWhoClicked().getUniqueId());
 				if (!duel.getSpectators().isEmpty()) {
 					duel.getSpectators().forEach(spectator -> {
-						if (profile.getSpectateSettings().get(0)) Bukkit.getPlayer(event.getWhoClicked().getUniqueId()).showPlayer(Bukkit.getPlayer(spectator));
-						if (!profile.getSpectateSettings().get(0)) Bukkit.getPlayer(event.getWhoClicked().getUniqueId()).hidePlayer(Bukkit.getPlayer(spectator));
+						if (profile.getSpectateSettings().getFirst()) Bukkit.getPlayer(event.getWhoClicked().getUniqueId()).showPlayer(Bukkit.getPlayer(spectator));
+						if (!profile.getSpectateSettings().getFirst()) Bukkit.getPlayer(event.getWhoClicked().getUniqueId()).hidePlayer(Bukkit.getPlayer(spectator));
 					});
 				}
 				inventoryManager.refreshSettingsInventory(event.getWhoClicked().getUniqueId(), 0, true);
@@ -232,6 +232,7 @@ public class InventoryListener implements Listener {
 				return;
 			}
 		}
+		final String inventoryName = inventory.getName();
 		if (inventoryName.contains("Spectate") && !inventoryName.contains("Settings") ) {
 			if (event.getCurrentItem() == null || event.getCurrentItem().getType().equals(Material.AIR)) return;
 			event.setResult(Result.DENY);
@@ -247,8 +248,11 @@ public class InventoryListener implements Listener {
 			event.setResult(Result.DENY);
 			event.setCancelled(true);
 			if (event.getCurrentItem().getType().equals(Material.LEVER)) {
-				final String nextName = event.getCurrentItem().getItemMeta().getDisplayName().replace(ChatColor.DARK_GRAY + "Go to" + ChatColor.RESET + ": ", "");
+				String nextName = event.getCurrentItem().getItemMeta().getDisplayName().replace(ChatColor.DARK_GRAY + "Go to" + ChatColor.RESET + ": ", "");
 				event.getWhoClicked().closeInventory();
+				if (Core.API.getManagerHandler().getProfileManager().getRealNameInDisguised().containsKey(nextName)) {
+					nextName = Core.API.getManagerHandler().getProfileManager().getRealNameInDisguised().get(nextName);
+				}
 				event.getWhoClicked().openInventory(inventoryManager.getPreviewInventory().get(CoreUtils.getUUID(nextName)));
 			}
 		}
@@ -257,14 +261,14 @@ public class InventoryListener implements Listener {
 	
 	@EventHandler
 	public void onCloseInventory(final InventoryCloseEvent event) {
-		if (event.getInventory().getName().equalsIgnoreCase(this.inventoryManager.getQueueInventory()[2].getName())) {
+		if (event.getInventory().equals(this.inventoryManager.getQueueInventory()[2])) {
 			if (Utils.getRequestByUUID(event.getPlayer().getUniqueId()).getKit() == null) {
 				this.main.getManagerHandler().getRequestManager().removeRequest(event.getPlayer().getUniqueId());
 				Bukkit.getPlayer(event.getPlayer().getUniqueId()).sendMessage(ChatColor.RED + "You have cancelled your request duel.");
 				return;
 			}	
 		}
-		if (event.getInventory().getName().equalsIgnoreCase(this.inventoryManager.getArenaInventory()[0].getName()) || event.getInventory().getName().equalsIgnoreCase(this.inventoryManager.getArenaInventory()[1].getName())) {
+		if (event.getInventory().equals(this.inventoryManager.getArenaInventory()[0]) || event.getInventory().equals(this.inventoryManager.getArenaInventory()[1])) {
 			if (Utils.getRequestByUUID(event.getPlayer().getUniqueId()).getArena() == null) {
 				this.main.getManagerHandler().getRequestManager().removeRequest(event.getPlayer().getUniqueId());
 				Bukkit.getPlayer(event.getPlayer().getUniqueId()).sendMessage(ChatColor.RED + "You have cancelled your request duel.");
